route.tf
resource "aws_route_table" "public_route" {
  vpc_id = aws_vpc.aws_vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }
  tags = {
    Name = "public_route"
  }
}
resource "aws_route_table_association" "public_route_subnets" {
  count = length(var.public_subnet)
  subnet_id = aws_subnet.public_subnet[count.index].id
  route_table_id = aws_route_table.public_route.id
}
resource "aws_route_table" "private_route" {
  vpc_id = aws_vpc.aws_vpc.id
  route {
    nat_gateway_id = aws_nat_gateway.nat.id
    cidr_block = "0.0.0.0/0"
  }
  tags = {
    Name = "private_route"
  }
}
